# ttsproof

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
examples/speechsdk/: .gitignore  README.md  package-lock.json  package.json  speak.mjs
src/ttsproof/: __init__.py  asr.py  audio.py  cases.py  cli.py  config.py  metrics.py  normalize.py  report_html.py  runner.py
tests/: test_audio.py  test_cases_and_scoring.py  test_metrics.py  test_normalize.py
