[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttsproof"
version = "0.1.0"
description = "Automated failure-mode QA for text-to-speech systems: structural audio checks, equivalence-aware WER/CER, and ASR-uncertainty quarantine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Panagiotis Gkilis", email = "bedvibe@bedvibe.studio" }]
keywords = ["tts", "text-to-speech", "qa", "quality-assurance", "speech", "audio", "evaluation", "wer", "asr"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "numpy>=1.24",
  "soundfile>=0.12",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Mormolykos/ttsproof"
"Technical report (DOI)" = "https://doi.org/10.5281/zenodo.20757553"
Portfolio = "https://tts.bedvibe.studio/portfolio/"

[project.scripts]
ttsproof = "ttsproof.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
